<resources>
    <string name="app_name">EpiTogether</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_of_the_homepage">Button Of The HomePage</string>
    <string name="button_of_the_health_section">Button of The Health Section</string>
    <string name="button_to_create_a_new_register">Button to create a new Register</string>
    <string name="button_to_the_feed_section">Button to the Feed Section</string>
    <string name="button_to_access_the_profile_section">Button to access the profile section</string>
    <string name="when_clicked_goes_to_medicamentos">When clicked goes to medicamentos</string>
    <string name="when_clicked_goes_to_consultas">when clicked goes to Consultas</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- Date and Time Picker text -->
    <string name="time_selected">%1$s</string>

</resources>